Issue #88.