@@ -59,9 +59,16 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
  * 4.506: [GC (CMS Final Remark) [YG occupancy: 100369 K (153344 K)]4.506: [GC (CMS Final Remark) 4.506: [ParNew: 100369K-&gt;10116K(153344K), 0.0724021 secs] 100369K-&gt;16685K(4177280K), 0.0724907 secs] [Times: user=0.13 sys=0.01, real=0.07 secs]
  * </pre>
  * 
- * *
  * <p>
- * 4) With datestamp:
+ * 4) JDK8 without <code>-XX:+PrintGCDetails</code>.
+ * </p>
+ * 
+ * <pre>
+ * 2017-04-03T03:12:02.133-0500: 30.385: [GC (CMS Final Remark) 2017-04-03T03:12:02.134-0500: 30.385: [GC (CMS Final Remark) 890910K-&gt;620060K(7992832K), 0.1223879 secs] 620060K(7992832K), 0.2328529 secs]
+ * </pre>
+ * 
+ * <p>
+ * 5) With datestamp:
  * </p>
  * 
  * <pre>
@@ -69,7 +76,7 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
  * </pre>
  * 
  * <p>
- * 5) JDK 1.6 with class unloading:
+ * 6) JDK 1.6 with class unloading:
  * </p>
  * 
  * <pre>
@@ -81,7 +88,7 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
  * </p>
  * 
  * <p>
- * 6) JDK 1.7 with class unloading with "scrub symbol table" and "scrub string table" vs.
+ * 7) JDK 1.7 with class unloading with "scrub symbol table" and "scrub string table" vs.
  * "scrub symbol &amp; string tables":
  * </p>
  * 
@@ -90,7 +97,7 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
  * </pre>
  * 
  * <p>
- * 7) JDK8 with class unloading with trigger and no space after "scrub symbol table":
+ * 8) JDK8 with class unloading with trigger and no space after "scrub symbol table":
  * </p>
  * 
  * <pre>
@@ -98,7 +105,7 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
  * </pre>
  * 
  * <p>
- * 8) JDK7 with class unloading with trigger with non-parallel rescan: "grey object" and "root" rescans:
+ * 9) JDK7 with class unloading with trigger with non-parallel rescan: "grey object" and "root" rescans:
  * </p>
  * 
  * <pre>
@@ -106,7 +113,7 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
  * </pre>
  * 
  * <p>
- * 9) JDK8 with class unloading without the initial GC|YG block:
+ * 10) JDK8 with class unloading without the initial GC|YG block:
  * </p>
  * 
  * <pre>
@@ -114,7 +121,7 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
  * </pre>
  * 
  * <p>
- * 10) JDK7 with class unloading with trigger with non-parallel rescan: "grey object" and "root" rescans:
+ * 11) JDK7 with class unloading with trigger with non-parallel rescan: "grey object" and "root" rescans:
  * </p>
  * 
  * <pre>
@@ -165,14 +172,15 @@ public class CmsRemarkEvent extends CmsIncrementalModeCollector implements Block
             + "\\(" + JdkRegEx.SIZE + "\\), " + JdkRegEx.DURATION + "\\]" + JdkRegEx.TIMES_BLOCK + "?[ ]*$";
 
     /**
-     * Regular expression for JDK8 logging with {@link org.eclipselabs.garbagecat.domain.jdk.ParNewEvent} ending.
+     * Regular expression for JDK8 logging with {@link org.eclipselabs.garbagecat.domain.jdk.ParNewEvent} from
+     * <code>-XX:+CMSScavengeBeforeRemark</code>.
      */
     private static final String REGEX_PARNEW = "^(" + JdkRegEx.DATESTAMP + ": )?" + JdkRegEx.TIMESTAMP + ": \\[GC \\(("
-            + JdkRegEx.TRIGGER_CMS_FINAL_REMARK + ")\\)[ ]{0,1}\\[YG occupancy: " + JdkRegEx.SIZE + " \\("
-            + JdkRegEx.SIZE + "\\)](" + JdkRegEx.DATESTAMP + ": )?" + JdkRegEx.TIMESTAMP + ": \\[GC \\("
-            + JdkRegEx.TRIGGER_CMS_FINAL_REMARK + "\\)[ ]{0,1}(" + JdkRegEx.DATESTAMP + ": )?" + JdkRegEx.TIMESTAMP
-            + ": \\[ParNew( \\((" + JdkRegEx.TRIGGER_PROMOTION_FAILED + ")\\))?: " + JdkRegEx.SIZE + "->"
-            + JdkRegEx.SIZE + "\\(" + JdkRegEx.SIZE + "\\), " + JdkRegEx.DURATION + "\\] " + JdkRegEx.SIZE + "->"
+            + JdkRegEx.TRIGGER_CMS_FINAL_REMARK + ")\\)[ ]{0,1}(\\[YG occupancy: " + JdkRegEx.SIZE + " \\("
+            + JdkRegEx.SIZE + "\\)])?(" + JdkRegEx.DATESTAMP + ": )?" + JdkRegEx.TIMESTAMP + ": \\[GC \\("
+            + JdkRegEx.TRIGGER_CMS_FINAL_REMARK + "\\)[ ]{0,1}((" + JdkRegEx.DATESTAMP + ": )?" + JdkRegEx.TIMESTAMP
+            + ": \\[ParNew( \\((" + JdkRegEx.TRIGGER_PROMOTION_FAILED + ")\\))?:)? " + JdkRegEx.SIZE + "->"
+            + JdkRegEx.SIZE + "\\(" + JdkRegEx.SIZE + "\\), " + JdkRegEx.DURATION + "\\] (" + JdkRegEx.SIZE + "->)?"
             + JdkRegEx.SIZE + "\\(" + JdkRegEx.SIZE + "\\)" + JdkRegEx.ICMS_DC_BLOCK + "?, " + JdkRegEx.DURATION + "\\]"
             + JdkRegEx.TIMES_BLOCK + "?[ ]*$";
 
@@ -217,16 +225,16 @@ public class CmsRemarkEvent extends CmsIncrementalModeCollector implements Block
             Matcher matcher = pattern.matcher(logEntry);
             if (matcher.find()) {
                 timestamp = JdkMath.convertSecsToMillis(matcher.group(12)).longValue();
-                if (matcher.group(41) != null) {
-                    trigger = matcher.group(41);
+                if (matcher.group(43) != null) {
+                    trigger = matcher.group(43);
                 } else {
                     trigger = matcher.group(13);
                 }
-                if (matcher.group(51) != null) {
+                if (matcher.group(54) != null) {
                     super.setIncrementalMode(true);
                 }
                 // The last duration is the total duration for the phase.
-                duration = JdkMath.convertSecsToMillis(matcher.group(52)).intValue();
+                duration = JdkMath.convertSecsToMillis(matcher.group(55)).intValue();
             }
             classUnloading = false;
         } else if (logEntry.matches(REGEX_CLASS_UNLOADING)) {
